--- a/index.css
+++ b/index.css
@@ -1,7 +1,9 @@
 .holder {
     display: flex;
     outline: solid black;
-    justify-content: center;
+    width: 250px;
+    flex-wrap: wrap;
+    margin-left: 100px;
 }
 
 .item:nth-child(1) {
@@ -9,9 +11,26 @@
 }
 
 .item:nth-child(2) {
+  background-color: yellow;
+}
 
+.item:nth-child(3) {
+  background-color: purple;
+}
+
+.item:nth-child(4) {
+ background-color: blue;
+}
+
+.item:nth-child(5) {
+  background-color: green;
 }
 
 .item {
-    width: 30px;
+    width: 45px;
+}
+
+.item:nth-child(-n+2) {
+    flex-grow: 1.5;
+    flex-basis: 45px;
 }
