--- a/index.css
+++ b/index.css
@@ -1,9 +1,10 @@
 .holder {
     display: flex;
     outline: solid black;
-    width: 250px;
+    width: 300px;
     flex-wrap: wrap;
-    margin-left: 100px;
+    margin-left: 300px;
+    margin-top: 200px;
 }
 
 .item:nth-child(1) {
@@ -24,7 +25,9 @@
 
 .item:nth-child(5) {
   background-color: green;
+  order: -2;
 }
+
 
 .item {
     width: 45px;
@@ -33,4 +36,4 @@
 .item:nth-child(-n+2) {
     flex-grow: 1.5;
     flex-basis: 45px;
-}
+}  
