--- a/index.css
+++ b/index.css
@@ -1,11 +1,12 @@
 .holder {
     display: flex;
     outline: solid black;
-    width: 100px;
+    width: 400px;
     flex-wrap: wrap;
     margin-left: 300px;
     margin-top: 200px;
-    height: 50px;
+    height: 100px;
+    border-radius: 7px;
 }
 
 .item:nth-child(1) {
@@ -34,19 +35,21 @@
 
 
 .item {
-    width: 30px;
-    height: 25px;
-    text-align: center;
+    width: 130px;
+    height: 50px;
     flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .item:nth-child(5) {
     flex-grow: 1.5;
-    flex-basis: 45px;
+    flex-basis: 150px;
 }  
 
 .item:first-child {
   flex-grow: 1.5;
-  flex-basis: 45px;
+  flex-basis: 150px;
 } 
 
