--- a/index.css
+++ b/index.css
@@ -6,7 +6,8 @@
     margin-left: 300px;
     margin-top: 200px;
     height: 100px;
-    border-radius: 7px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 
 .item:nth-child(1) {
